# microservice-lightweight-competion-

./: README.md  pom.xml
mlc-go-project/: pom.xml
mlc-go-project/mlc-go-docker/: Dockerfile  buildDockerImage.sh
mlc-go-project/mlc-go-microservice/adderMicroservice/: main.go
mlc-go-project/src/scripts/: buildDockerImage.sh  buildMicroserviceForDocker.sh
mlc-snap-project/: pom.xml
mlc-snap-project/mlc-snap-docker/: Dockerfile  buildDockerImage.sh
mlc-snap-project/mlc-snap-docker/src/: buildDockerImage.sh
mlc-snap-project/mlc-snap-microservice/: mlc-snap-microservice.cabal  stack.yaml
mlc-snap-project/mlc-snap-microservice/src/: Microservice.hs
mlc-snap-project/src/main/Docker/: Dockerfile
mlc-springboot-project/: pom.xml
mlc-springboot-project/mlc-springboot-docker/: pom.xml
mlc-springboot-project/mlc-springboot-microservice/: pom.xml
mlc-swift-project/: .gitignore  README.md  pom.xml
mlc-swift-project/mlc-swift-docker/: Dockerfile  buildDockerImage.sh
mlc-swift-project/mlc-swift-microservice/: Package.swift  main.swift
mlc-swift-project/mlc-swift-misc/: plus.sh
mlc-wildfly-project/: pom.xml
mlc-wildfly-project/mlc-wildfly-docker/: pom.xml
mlc-wildfly-project/mlc-wildfly-microservice/: pom.xml
mlc-wildflyswarm-project/: pom.xml
mlc-wildflyswarm-project/mlc-wildflyswarm-docker/: pom.xml
mlc-wildflyswarm-project/mlc-wildflyswarm-microservice/: pom.xml
mlc-yesod-project/: how_to_get_it _to_run  microservice.hs
mlc-yesod-project/mlc-yesod-microservice/: mlc-yesod-microservice.cabal
mlc-yesod-project/mlc-yesod-microservice/src/: Microservice.hs
src/main/comparison/: Results.numbers  measureLightness.sh
(+15 files in other folders)
