name:                mlc-snap-microservice
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mlc-snap-microservice-exe
  hs-source-dirs:      src
  main-is:             Microservice.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                       , snap-core >= 1.0
                       , snap-server >= 1.0
                       , bytestring >= 0.10
                       , bytestring-lexing >= 0.5
                       , containers >= 0.5
  default-language:    Haskell2010