name:                mlc-yesod-microservice
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable mlc-yesod-microservice-exe
  hs-source-dirs:      src
  main-is:             Microservice.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010